2014-10-05 :
    - U.I calls deported from bot to client
    - Client is no more able to run without U.I